After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759205 - clutterautovideosink: Leaks it's kit
clutterautovideosink: Leaks it's kit
Status: RESOLVED FIXED
Product: clutter-gst
Classification: Other
Component: general
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: clutter-gst-maint
clutter-gst-maint
Depends on:
Blocks:
 
 
Reported: 2015-12-08 19:40 UTC by Nicolas Dufresne (ndufresne)
Modified: 2015-12-10 14:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
auto-video-sink: Don't leak kid on dispose (1.13 KB, patch)
2015-12-08 19:43 UTC, Nicolas Dufresne (ndufresne)
committed Details | Review

Description Nicolas Dufresne (ndufresne) 2015-12-08 19:40:38 UTC
The kid pointer is leaked.
Comment 1 Nicolas Dufresne (ndufresne) 2015-12-08 19:43:12 UTC
Created attachment 316970 [details] [review]
auto-video-sink: Don't leak kid on dispose

Currently we leak the kid by not removing it from the
content. Remove the kid sink from the content when removing
it from the pipeline.
Comment 2 Lionel Landwerlin 2015-12-09 08:56:27 UTC
Review of attachment 316970 [details] [review]:

Thanks,

It looks good to me. Maybe you could add something like this to the commit message :

There is a cycle of refcounts between the sink and the content (both have a reference to each other).
We need to break that cycle to ensure objects are disposed properly.
Comment 3 Lionel Landwerlin 2015-12-10 14:38:00 UTC
Review of attachment 316970 [details] [review]:

Pushed to 3.0 branch.