auto-video-sink: Don't leak kid on dispose

Currently we leak the kid by not removing it from the
content. Remove the kid sink from the content when removing
it from the pipeline.

https://bugzilla.gnome.org/show_bug.cgi?id=759205